Details
-
Bug
-
Resolution: Fixed
-
Major
Description
No errors, It just does not work, almost no visible effect when you trying to use these functions.
Tested revision 5f692ed.
Update as of 0.4.15-dev-1125-g79794b524c:
ReactOS Paint on Windows XP/2003 and Wine:
- Mirroring:
Horizontally works perfectly
Vertically works perfectly - Rotation:
180º works
90º and 270º rotation doesn't work - Stretching/Skew:
Stretching works, but changes the canvas size
Skew doesn't work
Attachments
Issue Links
- is duplicated by
-
CORE-16641 MSPAINT: Rotate/Mirror won't work
-
- Resolved
-
- relates to
-
CORE-17334 ReactOS Paint problems reproduced in ReactOS only
-
- Resolved
-